[package]
name = "rfe"
version = "0.11.2"
edition = "2021"

[[bin]]
name = "rfe"
path = "src/main.rs"

[dependencies]
colored = "2.1"
dirs = "5.0"
unicode-width = "0.1"
open = "5.0"
rustyline = { version = "12.0", features = ["custom-bindings"] }
arboard = "3.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
tempfile = "3.10"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
